syntax = "proto3";

package me.sssaang.sample;

message SampleRequest {
  string userId = 1;
  string message = 2;
}

message SampleResponse {
  string message = 1;
}

service SampleService {
  rpc SampleCall (SampleRequest) returns (SampleResponse) {}
  rpc SampleServerStream (SampleRequest) returns (stream SampleResponse) {}
  rpc SampleClientStream (stream SampleRequest) returns (SampleResponse) {}
  rpc SampleBidirectionalStream (stream SampleRequest) returns (stream SampleResponse) {}
}
